@@ -146,9 +146,11 @@ Would you like to save now in order to refresh the display?</label>
 			<label index="rm.closeAllDocs">Close all documents</label>
 			<label index="rm.clearCache_clearCache">Clear cache</label>
 			<label index="rm.clearCache_thisPage">This page</label>
-			<label index="rm.clearCache_pages">Clear page content cache</label>
-			<label index="rm.clearCache_all">Clear all caches</label>
-			<label index="rm.clearCache_allTypo3Conf">Clear configuration cache</label>
+			<label index="rm.clearCache_all">Clear FE cache</label>
+			<label index="rm.clearCache_allTypo3Conf">Clear cache in typo3conf/</label>
+			<label index="rm.clearCacheMenu_all">Clear all caches</label>
+			<label index="rm.clearCacheMenu_pages">Clear page content cache</label>
+			<label index="rm.clearCacheMenu_allTypo3Conf">Clear configuration cache</label>
 			<label index="rm.adminFunctions">Admin functions</label>
 			<label index="rm.edit">Edit</label>
 			<label index="rm.export">Export</label>
